Changes in getVariantWithGenotypes and getVariantListFromDBCursor
... to allow fine selection of samples to retrieve genotypes for